added placeholder before information is loaded

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap&subset=latin-ext" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="placeholder">
 <div class="container">
 	<div class="weather-current">
 		<div class="weather-heading">
@@ -27,12 +27,37 @@
 			</div>
 			<div class="weather-data_temperature">
 				<p></p>
-				<span>&deg;C</span>
+				<span></span>
 			</div>
 		</div>
 	</div>
 	<div class="weather-hourly-container">
-		<div class="weather-hourly"></div>
+		<div class="weather-hourly">
+			<div class="weather_hour">
+				<div class="text-placeholder"></div>
+				<div class="icon-placeholder"></div>
+				<div class="text-placeholder"></div>
+				<div class="text-placeholder"></div>
+			</div>
+			<div class="weather_hour">
+				<div class="text-placeholder"></div>
+				<div class="icon-placeholder"></div>
+				<div class="text-placeholder"></div>
+				<div class="text-placeholder"></div>
+			</div>
+			<div class="weather_hour">
+				<div class="text-placeholder"></div>
+				<div class="icon-placeholder"></div>
+				<div class="text-placeholder"></div>
+				<div class="text-placeholder"></div>
+			</div>
+			<div class="weather_hour">
+				<div class="text-placeholder"></div>
+				<div class="icon-placeholder"></div>
+				<div class="text-placeholder"></div>
+				<div class="text-placeholder"></div>
+			</div>
+		</div>
 		<div class="weather-hourly_controls">
 			<button type="button" class="btn btn-left" data-item=".weather-hourly" data-direction="left"></button>
 			<button type="button" class="btn btn-right" data-item=".weather-hourly" data-direction="right"></button>
