changed funcitons for getting location and weather

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body class="placeholder">
 <div class="container">
 	<div class="weather-interaction">
-		<input type="text" id="city" placeholder="Enter city name" value="">
-		<button type="button" id="get-location">Get your location</button>
-		<button type="button" id="get-weather" data-lat="" data-long="" disabled>Get weather</button>
+		<input type="text" id="city" placeholder="Enter Latitude Longitude" value="">
+		<button type="button" id="get-location">Get weather from your location</button>
+		<button type="button" id="get-weather" data-lat="" data-long="" disabled>Get weather from input</button>
 	</div>
 	<div class="weather-current">
 		<div class="weather-heading">
